--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-apply plugin: 'java'
 apply plugin: 'application'
 
 mainClassName = 'me.loki2302.App'
@@ -12,5 +11,9 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile("org.springframework.boot:spring-boot-starter-web:1.0.2.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-web:1.2.3.RELEASE")
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.3'
 }
