--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,15 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile("org.springframework.boot:spring-boot-starter-test:1.2.3.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-web:1.2.3.RELEASE")
+}
+
+test {
+    testLogging {
+        showStandardStreams = true
+        events 'failed', 'passed', 'skipped'
+    }
 }
 
 task wrapper(type: Wrapper) {
